# lidar_pkg_ros2

./: CMakeLists.txt  README.md  package.xml
config/: lidar_params.yaml
launch/: lidar.launch.py  monitor.launch.py
rviz/: lidar.rviz
scripts/: 99-lidar.rules  create_udev_rules.sh  delete_udev_rules.sh
src/: lidar_node.cpp
urdf/: lidar.urdf
